# dias

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yaml  main.yml
conf/: dias.conf
conf/tasks/: _sample.conf  _sample_task.conf  autos.conf  daily_ringmaps.conf  dataset.conf  feedpositions.conf  feedpositions_task.conf  find_jump.conf  findjump_task.conf  flag_rfi.conf  flag_rfi_task.conf  rawadc_task.conf  redundancycheck.conf  rx_temp.conf  sample_task.conf  sensitivity.conf  sensitivity_task.conf  source_spectra.conf  thermaldata.conf  thermaldata_task.conf
dias/: __init__.py  _version.py  analyzer.py  chime_analyzer.py  config_loader.py  dias.conf  dias.py  exception.py  job.py  main.py  outfile_tracking.py  prometheus.py  scheduler.py  service.py  task.py  task_queue.py  tracker.py
dias/analyzers/: __init__.py  autos_analyzer.py  daily_ringmaps.py  dataset_analyzer.py  feedpositions_analyzer.py  find_jump_analyzer.py  findjump_analyzer.py  flag_rfi_analyzer.py  rawADC_analyzer.py  rawadc_analyzer.py  redundancy_analyzer.py  rx_temp_analyzer.py  sample_analyzer.py  sensitivity_analyzer.py  sensitivity_test.py  source_spectra_analyzer.py  test_analyzer.py  thermaldata_analyzer.py
dias/scripts/: __init__.py  dias_control_program.py  dias_wrapper.py
dias/tasks/: sample.conf  (+1 more)
docs/: Makefile  conf.py  index.rst  rtd-requirements.txt
scripts/: dias
test/: make_test_swarm.py  test_bitshuffle.py  test_stringconverter.py  test_tracker.py
(+16 files in other folders)
