[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "setuptools-git-versioning",
]
build-backend = "setuptools.build_meta"

[project]
name = "dias"
authors = [
  {name = "The CHIME Collaboration", email = "dvw@phas.ubc.ca"}
]
description = "CHIME data integrity automation system"
requires-python = ">=3.10"
dynamic = ["readme", "version"]
license-files = ["LICENSE"]
dependencies = [
    "chimedb.data_index @ git+https://github.com/chime-experiment/chimedb_di.git",
    "chimedb.dataset @ git+https://github.com/chime-experiment/chimedb_dataset.git",
    "caput @ git+https://github.com/radiocosmology/caput.git",
    "draco @ git+https://github.com/radiocosmology/draco.git",
    "ch_util @ git+https://github.com/chime-experiment/ch_util.git",
    "prometheus_client>=0.5.0",
    "bitshuffle @ git+https://github.com/kiyo-masui/bitshuffle.git",
    "skyfield",
    "pyyaml",
    "scipy",
    "msgpack",
    "numpy",
    "h5py",
    "pywavelets",
    "requests",
]

[tool.setuptools.packages.find]
exclude = ["conf"]

[tool.setuptools]
script-files = ["scripts/dias"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools-git-versioning]
enabled = true
